Bug 311553 - No minimum size on the general or effects tab of kwincompositing kcm
Summary: No minimum size on the general or effects tab of kwincompositing kcm
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 4.9.90 (Beta 2)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 4.10
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-12 04:42 UTC by Michael Daffin
Modified: 2013-01-07 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Daffin 2012-12-12 04:42:49 UTC
When the kwincompositing kcm is launched externally from systemsettings (kcmshell4 kwincompositing) there is no minimum size set on the window when on the general or all effects tab. This allows the user to shrink the window as small as they want and makes the components look off when shrunk too much.

Reproducible: Always

Steps to Reproduce:
1. run "kcmshell4 kwincompositing"
2. Switch to the General or All effects tab
3. Resize the window as small as it will fo
Actual Results:  
The window will shrink as small as it can be which causes visual glitches as the elements are to small to fit in the window.

Expected Results:  
The window should stop shrinking at a minimum size.

The advanced tab does not suffer from this problem.
Comment 1 Thomas Lübking 2012-12-17 20:15:48 UTC
layout needs explicit activation, have patch - gonna apply for rc2
Comment 2 Thomas Lübking 2013-01-02 18:00:15 UTC
Git commit 67875aa39080f4b043fb8759f9f52790475351fa by Thomas Lübking.
Committed on 17/12/2012 at 21:12.
Pushed by luebking into branch 'KDE/4.10'.

activate layout, no idea why doesn't happen implicitly
FIXED-IN: 4.10
REVIEW: 107851

M  +1    -0    kwin/kcmkwin/kwincompositing/main.cpp

http://commits.kde.org/kde-workspace/67875aa39080f4b043fb8759f9f52790475351fa
Comment 3 Thomas Lübking 2013-01-02 18:06:42 UTC
Git commit 78144e760ba86d6624fe2b83e50d61eb7f25f618 by Thomas Lübking.
Committed on 17/12/2012 at 21:12.
Pushed by luebking into branch 'master'.

activate layout, no idea why doesn't happen implicitly
FIXED-IN: 4.10
REVIEW: 107851

M  +1    -0    kwin/kcmkwin/kwincompositing/main.cpp

http://commits.kde.org/kde-workspace/78144e760ba86d6624fe2b83e50d61eb7f25f618