activate layout, no idea why doesn't happen implicitly

BUG: 311553
FIXED-IN: 4.10
REVIEW: 107851